k8s/3-example/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v1
spec:
  selector:
    matchLabels:
      app: echoserver-v1
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-v1
    spec:
      containers:
        - name: echoserver-v1
          image: gcr.io/google-containers/echoserver:2.2
          ports:
            - containerPort: 8080
