k8s/3-example/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v1
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: echoserver-v1
