k8s/3-example/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v1
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: echo.eternalamit5.pvt
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver-v1
                port:
                  number: 8080
